# src/FraggerZ/assets/swagger.json
@@ -1,10 +1,22 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "2021-02-27T07:16:20Z",
     "title": "fraggerz-api"
   },
-  "schemes": [ "https" ],
+  "components": {
+    "securitySchemes": {
+      "BasicAuth": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    }
+  },
+  "security": [
+    {
+      "BasicAuth": []
+    }
+  ],
   "paths": {
     "/ladder/{id}/leaderboard": {
       "get": {
